# signalroom

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  install.ps1  install.sh  pyproject.toml
docs/: ARCHITECTURE.md  CONNECTIONS.md  DEPLOYMENT.md  MODEL_DIAGNOSTICS.md  MODEL_ORCHESTRATION_TLDR.md  OPERATIONAL_ACCEPTANCE.md  RELEASE_CANDIDATE.md  SECURITY.md  UPGRADES.md  UPSTREAM_ADOPTION.md
services/cisco_tsm/: Dockerfile  app.py
src/splunk_security_agent/: __init__.py  app.py  config.py  diagnose_all.py  evaluation.py  feedback.py  main.py  mcp_server.py  model_setup.py  operational_acceptance.py  progress.py  release_readiness.py  retention.py  (+3 more)
tests/: test_agent_guardrails.py  test_agent_retrieval.py  test_assurance.py  test_audit_export.py  test_audit_operations.py  test_audit_routes.py  test_auth.py  test_cases.py  test_config.py  test_connection_diagnostics.py  test_connections.py  test_delivery.py  test_detection_deployment.py  test_detections.py  test_diagnose_all.py  test_discovery.py  test_discovery_analyzer.py  test_discovery_comparison.py  test_discovery_jobs.py  test_estate_review_packets.py  test_evaluation.py  test_evaluation_suites.py  test_evidence.py  test_feedback.py  test_golden_benchmarks.py  test_local_transformers.py  test_main.py  test_mcp_server.py  test_model_setup.py  test_model_tournaments.py  test_model_trust.py  test_oidc.py  test_ollama_provider.py  test_operational_acceptance.py  test_query_intelligence.py  test_recovery.py  test_release_readiness.py  test_retention.py  test_router.py  test_splunk_mcp.py  (+9 more)
(+90 files in other folders)
