[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-security-agent"
version = "0.1.0"
description = "Local-first, model-routed security agent and MCP server for Splunk"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "cryptography>=42.0",
  "fastapi>=0.115",
  "httpx>=0.27",
  "PyJWT[crypto]>=2.10,<3",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
local-models = [
  "huggingface-hub>=0.27,<2",
  "sentence-transformers>=3.4,<6",
  "torch>=2.5",
  "transformers>=4.48,<6",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
splunk-security-agent = "splunk_security_agent.main:run"
signalroom-models = "splunk_security_agent.model_setup:run"
signalroom-eval = "splunk_security_agent.evaluation:run"
signalroom-verify-detection = "splunk_security_agent.detections.gitops_verifier:run"
signalroom-access = "splunk_security_agent.auth.recovery:run"
signalroom-recovery = "splunk_security_agent.recovery.cli:run"
signalroom-release-check = "splunk_security_agent.release_readiness:run"
signalroom-upgrade-check = "splunk_security_agent.upgrade_readiness:run"

[tool.hatch.build.targets.wheel]
packages = ["src/splunk_security_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
